# Formal-Languages

./: CMakeLists.txt  README.md  resultoperation.md
EarleyParser/: CMakeLists.txt  Grammar.cpp  Grammar.h  main.cpp
googletest-master/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
googletest-master/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-master/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
task18/: CMakeLists.txt  MaxPrefixSymbol.cpp  MaxPrefixSymbol.h  main.cpp
tests/: CMakeLists.txt  main.cpp  test.cpp
tests/googletest-master/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
tests/googletest-master/googlemock/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
tests/googletest-master/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest.cbp
tests/googletest-master/googletest/: CMakeLists.txt
